--- a/Endabgabe/Abschlussaufgabe.html
+++ b/Endabgabe/Abschlussaufgabe.html
@@ -10,7 +10,6 @@
 	<script src="Moveable.js" type="text/javascript" charset="utf-8"></script>
 	<script src="Snow.js" type="text/javascript" charset="utf-8"></script>
 	<script src="snowball.js" type="text/javascript" charset="utf-8"></script>
-	<script src="Score.js" type="text/javascript" charset="utf-8"></script>
 	<script src="Main.js" type="text/javascript" charset="utf-8"></script>
 
 	<script src="databaseclient.js" type="text/javascript" charset="utf-8"></script>
@@ -23,7 +22,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|IBM+Plex+Sans&display=swap" rel="stylesheet">
-	<audio id="audio_with_controls" controls src="wellensittich.mp3" type="audio/mp3"></audio>
+	<audio id="audio_with_controls" controls src="wellensittich.mpeg" type="audio/mp3"></audio>
 
 	<title>Vogelhaus Predator</title>
 </head>
